ecmascript/parser/tests/typescript-errors/tsc/expressions/unaryOperators/logicalNotOperator/logicalNotOperatorInvalidOperations/input.ts.stderr
error: Unexpected token `;`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
  --> $DIR/tests/typescript-errors/tsc/expressions/unaryOperators/logicalNotOperator/logicalNotOperatorInvalidOperations/input.ts:11:16
   |
11 | var BOOLEAN3 =!;
   |                ^

